src/objects/Eboard_Snapshot__c.object
<CustomObject>
    <description>contains Eboard Seats &amp; Demographic Monthly Snapshot; This is for Triana&apos;s Executive Board dashboard;</description>
    <fields>
        <fullName>Account_Id__c</fullName>
        <description>Salesforce Account Id</description>
        <label>Account Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_Group__c</fullName>
        <label>Age Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Under 30</fullName>
                    <color>#0B6FCE</color>
                    <label>Under 30</label>
                </value>
                <value>
                    <fullName>30 to 39</fullName>
                    <color>#78C953</color>
                    <label>30 to 39</label>
                </value>
                <value>
                    <fullName>40 to 49</fullName>
                    <color>#E27001</color>
                    <label>40 to 49</label>
                </value>
                <value>
                    <fullName>50 to 59</fullName>
                    <color>#A53711</color>
                    <label>50 to 59</label>
                </value>
                <value>
                    <fullName>60 to 69</fullName>
                    <color>#F3D904</color>
                    <label>60 to 69</label>
                </value>
                <value>
                    <fullName>70+</fullName>
                    <color>#A845DC</color>
                    <label>70+</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <description>Member&apos;s Age</description>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Birth_Date__c</fullName>
        <label>Birth Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Constituency_Id__c</fullName>
        <label>Constituency Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <description>Member&apos;s Salesforce Contact Id</description>
        <label>Contact ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coordinator_Email__c</fullName>
        <label>Coordinator Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coordinator_User_Id__c</fullName>
        <label>Coordinator User Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coordinator__c</fullName>
        <label>Coordinator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District_Name__c</fullName>
        <label>District Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eboard_Seat__c</fullName>
        <label>Eboard Seat</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eboard_Seats_Id__c</fullName>
        <label>Eboard Seats Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eboard_Vacant_Seat_name__c</fullName>
        <description>Eboard/Ecom or Vacant Seat Name</description>
        <label>Eboard/Vacant Seat name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Id__c</fullName>
        <label>Employer Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <label>Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asian</fullName>
                    <color>#78C953</color>
                    <label>Asian</label>
                </value>
                <value>
                    <fullName>Black or African American</fullName>
                    <color>#E27001</color>
                    <label>Black or African American</label>
                </value>
                <value>
                    <fullName>Hispanic or Latino</fullName>
                    <color>#A53711</color>
                    <label>Hispanic or Latino</label>
                </value>
                <value>
                    <fullName>White</fullName>
                    <color>#66E9BD</color>
                    <label>White</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Executive_Body_Title__c</fullName>
        <label>Executive Body Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FID__c</fullName>
        <label>FID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>Eboard/Ecomm First name</description>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                    <color>#0B6FCE</color>
                    <label>Male</label>
                </value>
                <value>
                    <fullName>Female</fullName>
                    <color>#F96FB7</color>
                    <label>Female</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hire_Date__c</fullName>
        <label>Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Classification__c</fullName>
        <label>Job Classification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Group__c</fullName>
        <label>Job Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Eboard/Ecomm Last Name</description>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_City__c</fullName>
        <label>Mailing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_State_Province__c</fullName>
        <label>Mailing State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Street__c</fullName>
        <label>Mailing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Zip_Postal_Code__c</fullName>
        <label>Mailing Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_ID__c</fullName>
        <label>Member ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organizer_1_Email__c</fullName>
        <label>Organizer 1 Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organizer_1_User_Id__c</fullName>
        <label>Organizer 1 User Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organizer_1__c</fullName>
        <label>Organizer 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organizer_2_Email__c</fullName>
        <label>Organizer 2 Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organizer_2_User_Id__c</fullName>
        <label>Organizer 2 User Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organizer_2__c</fullName>
        <label>Organizer 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <label>Race</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A/PI</fullName>
                    <color>#78C953</color>
                    <label>A/PI</label>
                </value>
                <value>
                    <fullName>Black or African American</fullName>
                    <color>#E27001</color>
                    <label>Black or African American</label>
                </value>
                <value>
                    <fullName>Latino</fullName>
                    <color>#A53711</color>
                    <label>Latino</label>
                </value>
                <value>
                    <fullName>White</fullName>
                    <color>#66E9BD</color>
                    <label>White</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Seat_Id__c</fullName>
        <label>Seat Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seat_Name__c</fullName>
        <label>Seat Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snapshot_Month__c</fullName>
        <formula>CASE(MONTH( Datevalue(CreatedDate)), 1, &quot;January&quot;, 2, &quot;February&quot;, 3, &quot;March&quot;,  4, &quot;April&quot;,  5, &quot;May&quot;,  6, &quot;June&quot;, 7, &quot;July&quot;, 8, &quot;August&quot;, 9, &quot;September&quot;, 10, &quot;October&quot;, 11, &quot;November&quot;, 12, &quot;December&quot;, &quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Snapshot Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snapshot_Year__c</fullName>
        <formula>TEXT(YEAR(DATEVALUE(CreatedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Snapshot Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Email__c</fullName>
        <label>Work Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Years_of_Service__c</fullName>
        <label>Years of Service</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yrs_of_Service__c</fullName>
        <label>Yrs of Service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Under 3 yrs</fullName>
                    <color>#66E9BD</color>
                    <label>Under 3 yrs</label>
                </value>
                <value>
                    <fullName>3 to 5 yrs</fullName>
                    <color>#0B24BE</color>
                    <label>3 to 5 yrs</label>
                </value>
                <value>
                    <fullName>5 to 10 yrs</fullName>
                    <color>#419249</color>
                    <label>5 to 10 yrs</label>
                </value>
                <value>
                    <fullName>10 to 15 yrs</fullName>
                    <color>#F3D904</color>
                    <label>10 to 15 yrs</label>
                </value>
                <value>
                    <fullName>15+</fullName>
                    <color>#641CCF</color>
                    <label>15+</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Eboard Snapshot</label>
    <nameField>
        <displayFormat>S-{MM}{DD}{YY}-{0}</displayFormat>
        <label>Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Eboard Snapshot</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>